# Buy-Sell-Algorithm-for-all-exchange-

./: .env.example  .gitignore  CLAUDE.md  EfloudPriceAction.pine  EfloudPriceAction_Strategy.pine  EfloudPriceAction_Strategy_v3.pine  EfloudPriceAction_Strategy_v4.pine  EfloudPriceAction_Strategy_v5.pine  EfloudPriceAction_Strategy_v6.pine  EfloudPriceAction_Strategy_v7.pine  EfloudPriceAction_Strategy_v7_Optimized.pine  Makefile  README.md  SAFETY.md  backtest_extract.py  last_result.json  paper_trading_log.md  parse_results.py  pyproject.toml  requirements.txt  run_alphatrend_test.bat  test_alphatrend.py  test_t3.py  test_t3_standalone.py
.agent/workflows/: backtest.md  hyperopt.md  indicator-implementation.md  live-trading.md  strategy-development.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP_V4.md  analysis_report.md
freqtrade/: PAPER_TRADING_GUIDE.md  PHASE2_COMPLETE.md  README.md  ablation_log.txt  analyze_backtests.py  analyze_coin_backtests.py  analyze_exit_reasons.py  analyze_exit_signals.py  backtest_2h_result.txt  backtest_2x_futures.txt  backtest_optimized.txt  baseline_T2.txt  batch_backtest.py  batch_hyperopt.sh  compare_all.py  compare_backtests.py  compare_leverage.py  compare_results.py  compare_strategies.py  comparison_output.txt  comparison_results.txt  docker-compose.yml  final_comparison.txt  final_result.txt  generate_ablation_report.py  hyperopt_best.json  hyperopt_output.txt  leverage_comparison.txt  monitor_paper_trading.ps1  paper_trading_log.md  parse_backtest.py  results_epaultimate_notrail.txt  results_holddca.txt  results_simpleema.txt  run_ablation.py  run_all_backtests.bat  run_all_backtests.ps1  setup_freqtrade.ps1  show_1000usd_results.py  show_exit_samples.py  (+6 more)
freqtrade/docs/: efloud_postmortem.md
freqtrade/reports/: 2025-12-22.json  cleanup_done.md  debug_2trades_resolution.md  efloud_range_htf_ablation.md  efloud_trigger_rates.md  exit_confidence_ablation.md  exit_reason_audit.md  exit_signal_attribution.md  exit_signal_fix_ablation.md  exit_signal_improvement.md  exit_signal_loss_profile.md  giveback_protector_ablation.md  regime_filters_ablation.md  stop_mechanism_ablation.md  summary.md
freqtrade/reports/experiments/: 20260102_regime_exit_protection.md
freqtrade/scripts/: analyze_exit_signal_losses.py  audit_efloud_quick.py  audit_efloud_triggers.py  backtest_all_strategies.sh  backtest_alphatrend.sh  backtest_btc.sh  backtest_futures.sh  backtest_macdv.sh  compare_strategies.py  compare_strategies.sh  daily_report.py  hyperopt_btc.sh  hyperopt_futures.sh  hyperopt_macdv.sh  run_backtests.py  run_chop_damping_ablation.py  run_exit_signal_ablation.py  run_regime_filters_ablation.py  weekly_summary.py
freqtrade/user_data/: analyze_entry_filters.py  backtest_output.txt  config.json  config_1000usd.json  config_aggressive.json  config_alphatrend_2h.json  config_backtest.json  config_futures_test.json  config_hyperopt.json  config_optimized_v1.json  config_paper_trading.json  config_production.json  config_v2b.json  diagnostic_v2.txt  parse_results.py  show_results.py  tradesv3.sqlite-shm  tradesv3.sqlite-wal  tradesv3_paper.sqlite-shm  tradesv3_paper.sqlite-wal
freqtrade/user_data/backtest_results/: .last_result.json  backtest-result-2025-12-21_09-36-01.meta.json  backtest-result-2025-12-21_09-45-03.meta.json  backtest-result-2025-12-21_10-05-51.meta.json  (+9 more)
reports/: aggressive_optimization.md  alphatrend_comparison.md  hyperopt_optimization_report.md  quick_wins_optimization_report.md  validation_matrix_final.md
scripts/: verify.sh
session_logs/: 2026-01-03_1h_debugging_session.md  learning_log_2026-01-02.md
src/: __init__.py  config.py  main.py
src/ai/: __init__.py  company_researcher.py  price_predictor.py  sentiment_analyzer.py
src/analysis/: __init__.py  indicators.py  multi_timeframe.py  patterns.py
src/api/: __init__.py  routes.py
src/data/: __init__.py  fetcher.py  news_aggregator.py
src/signals/: __init__.py  generator.py  risk_manager.py
temp_backtest/: backtest-result-2026-01-02_17-16-01.json  backtest-result-2026-01-02_17-16-01_EPAAlphaTrend.py  backtest-result-2026-01-02_17-16-01_config.json
temp_v1.1/: backtest-result-2026-01-02_17-30-29.json  backtest-result-2026-01-02_17-30-29_EPAAlphaTrend.py  backtest-result-2026-01-02_17-30-29_market_change.feather
temp_v1.2/: backtest-result-2026-01-02_17-38-41.json  backtest-result-2026-01-02_17-38-41_EPAAlphaTrend.py
tests/: conftest.py  test_strategy_sanity.py
(+125 files in other folders)
