[project]
name = "epa-trading-bot"
version = "1.0.0"
description = "High-performance algorithmic trading bot based on Efloud Price Action methodology"
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Emre Uludaşdemir", email = "emre@example.com"}
]
keywords = ["trading", "crypto", "freqtrade", "algorithmic-trading", "bitcoin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/EmreUludasdemir/Buy-Sell-Algorithm-for-all-exchange-"
Repository = "https://github.com/EmreUludasdemir/Buy-Sell-Algorithm-for-all-exchange-.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ═══════════════════════════════════════════════════════════════════════════
# RUFF - Python Linter & Formatter
# ═══════════════════════════════════════════════════════════════════════════
[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4

# Exclude paths
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "*.egg-info",
    "freqtrade/user_data/data",
    "freqtrade/user_data/backtest_results",
    "freqtrade/user_data/hyperopt_results",
    "temp_*",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "SIM108", # use ternary operator instead of if-else
    "SIM105", # use contextlib.suppress
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can use assert and have longer lines
"tests/**/*.py" = ["S101", "E501"]
# Scripts can have print statements
"scripts/**/*.py" = ["T201"]
"freqtrade/**/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["src", "freqtrade"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ═══════════════════════════════════════════════════════════════════════════
# PYTEST - Testing Framework
# ═══════════════════════════════════════════════════════════════════════════
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ═══════════════════════════════════════════════════════════════════════════
# MYPY - Type Checking (Optional)
# ═══════════════════════════════════════════════════════════════════════════
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "temp_*",
]

# ═══════════════════════════════════════════════════════════════════════════
# COVERAGE - Test Coverage
# ═══════════════════════════════════════════════════════════════════════════
[tool.coverage.run]
branch = true
source = ["src", "freqtrade/user_data/strategies"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
